--- a/rootfs/etc/supervisor/supervisord.conf
+++ b/rootfs/etc/supervisor/supervisord.conf
@@ -1,11 +1,11 @@
 [supervisord]
 nodaemon=true
-logfile=/tmp/stdout-supervisor.log
+logfile=/do/rtorrent/downloads/tmp/stdout-supervisor.log
 pidfile=/var/run/torrent/supervisor.pid
 
 [program:rtorrent]
 priority=2
-environment=TERM="xterm",HOME="/home/torrent",PWD="/home/torrent"
+environment=TERM="xterm",HOME="/do/rtorrent",PWD="/do/rtorrent"
 command=rtorrent
 redirect_stderr=true
 
