--- a/rootfs/home/torrent/.rtorrent.rc
+++ b/rootfs/home/torrent/.rtorrent.rc
@@ -1,52 +1,106 @@
-# rtorrent: v0.9.8
+# Launch as a daemon
+system.daemon.set = false
 
+# Instance layout
+method.insert = cfg.basedir, private|const|string, (cat,"/do/rtorrent/")
+method.insert = cfg.download, private|const|string, (cat,"/downloads/")
+method.insert = cfg.download_complete, private|const|string, (cat,(cfg.download),"complete/")
+method.insert = cfg.download_temp, private|const|string, (cat,(cfg.download),"temp/")
+method.insert = cfg.logs, private|const|string, (cat,(cfg.basedir),"log/")
+method.insert = cfg.session, private|const|string, (cat,(cfg.basedir),".session/")
+method.insert = cfg.watch, private|const|string, (cat,(cfg.basedir),"watch/")
+
+# Gets the full path of data of a torrent (it's a workaround for the possibly empty 'd.base_path' attribute)
+method.insert = d.data_path, simple, "if=(d.is_multi_file), (cat,(d.directory),/), (cat,(d.directory),/,(d.name))"
+
+# Default directory to save the downloaded torrents
+directory.default.set = (cat,(cfg.download_temp))
+
+# Default session directory
+session.path.set = (cat,(cfg.session))
+
+# SCGI socket
 network.scgi.open_port = 0.0.0.0:5000
 encoding.add = utf8
 
-directory.default.set = /data/torrents
-session.path.set = /data/.session
-protocol.encryption.set = allow_incoming,try_outgoing,enable_retry
-
-trackers.use_udp.set = no
-dht.port = <RTORRENT_DHT>
-dht.mode.set = disable
-protocol.pex.set = no
-
-network.port_range.set = <RTORRENT_PORT>-<RTORRENT_PORT>
+# Listening port for incoming peer traffic
+network.port_range.set = 50000-50000
 network.port_random.set = no
 
-pieces.hash.on_completion.set = yes
-pieces.memory.max.set = 3500M
+# UDP port to use for DHT
+dht.port.set = 6881
 
-network.bind_address.set = 0.0.0.0
+# Logging
+## levels = critical error warn notice info debug
+## groups = connection_* dht_* peer_* rpc_* storage_* thread_* tracker_* torrent_*
+log.open_file = "log",(cat,(cfg.logs),"rtorrent.log")
+log.add_output = "rpc_events","log"
+#log.execute = (cat,(cfg.logs),"execute.log")
+#log.xmlrpc = (cat,(cfg.logs),"xmlrpc.log")
+# Maximum and minimum number of peers to connect to per torrent
 throttle.min_peers.normal.set = 1
-throttle.max_peers.normal.set = 4096
+throttle.max_peers.normal.set = 100
+
+# Same as above but for seeding completed torrents (-1 = same as downloading)
 throttle.min_peers.seed.set = 1
-throttle.max_peers.seed.set = 4096
-throttle.max_uploads.set = 8192
-throttle.max_uploads.global.set = 8192
+throttle.max_peers.seed.set = 50
 
-network.xmlrpc.size_limit.set = 10000000
-network.max_open_files.set = 4096
-network.http.max_open.set = 4096
+# Maximum number of simultanious uploads per torrent
+throttle.max_uploads.set = 15
 
+# Global upload and download rate in KiB. "0" for unlimited
+throttle.global_down.max_rate.set_kb = 0
+throttle.global_up.max_rate.set_kb = 0
+
+# XMLRPC size limit
+network.xmlrpc.size_limit.set = 4M
+
+# Enable DHT support for trackerless torrents or when all trackers are down
+# May be set to "disable" (completely disable DHT), "off" (do not start DHT),
+# "auto" (start and stop DHT as needed), or "on" (start DHT immediately)
+dht.mode.set = auto
+
+# Enable peer exchange (for torrents not marked private)
+protocol.pex.set = yes
+
+# Check hash for finished torrents. Might be usefull until the bug is
+# fixed that causes lack of diskspace not to be properly reported
+pieces.hash.on_completion.set = yes
+
+# Set whether the client should try to connect to UDP trackers
+trackers.use_udp.set = yes
+
+# Set the max amount of memory address space used to mapping file chunks. This refers to memory mapping, not
+# physical memory allocation. Default: 1GB (max_memory_usage)
+# This may also be set using ulimit -m where 3/4 will be allocated to file chunks
+#pieces.memory.max.set = 1GB
+
+# Alternative calls to bind and ip that should handle dynamic ip's
+#schedule2 = ip_tick,0,1800,ip=rakshasa
+#schedule2 = bind_tick,0,1800,bind=rakshasa
+
+# Encryption options, set to none (default) or any combination of the following:
+# allow_incoming, try_outgoing, require, require_RC4, enable_retry, prefer_plaintext
+protocol.encryption.set = allow_incoming,try_outgoing,enable_retry
+
+# Set the umask for this process, which is applied to all files created by the program
+system.umask.set = 0022
+
+# Add a preferred filename encoding to the list
+encoding.add = UTF-8
+
+# Watch a directory for new torrents, and stop those that have been deleted
 execute2 = {sh,-c,/usr/bin/php /var/www/html/torrent/php/initplugins.php torrent &}
+schedule2 = watch_directory, 1, 1, (cat,"load.start=",(cfg.watch),"*.torrent")
+schedule2 = untied_directory, 5, 5, (cat,"stop_untied=",(cfg.watch),"*.torrent")
 
-schedule2 = watch_directory,1,1,"load_start=/data/.watch/*.torrent"
-schedule2 = untied_directory,5,5,"stop_untied=/data/.watch/*.torrent"
-schedule2 = scgi_permission,0,0,"execute.nothrow=chmod,\"g+w,o=\",/var/run/torrent/rtorrent.sock"
-schedule2 = insufficient_disk_space,1,30,close_low_diskspace=500M
+# Close torrents when diskspace is low
+schedule2 = monitor_diskspace, 15, 60, ((close_low_diskspace,1000M))
 
-method.set_key = event.download.finished,filebot,"execute2={/usr/local/bin/postdl,$d.base_path=,$d.name=,$d.custom1=}"
-method.set_key = event.download.erased,filebot_cleaner,"execute2=/usr/local/bin/postrm"
+# Move finished (no need Autotools/Automove plugin on ruTorrent)
+method.insert = d.get_finished_dir, simple, "cat=$cfg.download_complete=,$d.custom1="
+method.insert = d.move_to_complete, simple, "d.directory.set=$argument.1=; execute=mkdir,-p,$argument.1=; execute=mv,-u,$argument.0=,$argument.1=; d.save_full_session="
+method.set_key = event.download.finished,move_complete,"d.move_to_complete=$d.data_path=,$d.get_finished_dir="
 
-method.set_key = event.download.resumed,link1,"d.create_link=base_filename,/data/.state/,.started"
-method.set_key = event.download.paused,link1,"d.delete_link=base_filename,/data/.state/,.started"
-method.set_key = event.download.finished,"d.create_link=base_filename,/data/.state/,.finished"
-method.set_key = event.download.erased,"d.delete_link=base_filename,/data/.state/,.finished"
-
-log.open_file = "rtorrent", "/tmp/stdout-rtorrent.log"
-log.add_output = "critical", "rtorrent"
-log.add_output = "error", "rtorrent"
-log.add_output = "warn", "rtorrent"
-
+# Erase data when torrent deleted (no need erasedata plugin on ruTorrent)
+method.set_key = event.download.erased,delete_erased,"execute=rm,-rf,--,$d.data_path="
