--- a/rootfs/home/torrent/.rtorrent.rc
+++ b/rootfs/home/torrent/.rtorrent.rc
@@ -58,7 +58,7 @@ network.xmlrpc.size_limit.set = 4M
 # Enable DHT support for trackerless torrents or when all trackers are down
 # May be set to "disable" (completely disable DHT), "off" (do not start DHT),
 # "auto" (start and stop DHT as needed), or "on" (start DHT immediately)
-dht.mode.set = auto
+dht.mode.set = on
 
 # Enable peer exchange (for torrents not marked private)
 protocol.pex.set = yes
