--- a/rootfs/home/torrent/.rtorrent.rc
+++ b/rootfs/home/torrent/.rtorrent.rc
@@ -1,8 +1,8 @@
 # Launch as a daemon
-system.daemon.set = false
+system.daemon.set = true
 
 # Instance layout
-method.insert = cfg.basedir, private|const|string, (cat,"/do/rtorrent/")
+method.insert = cfg.basedir, private|const|string, (cat,"/home/torrent/")
 method.insert = cfg.download, private|const|string, (cat,"/downloads/")
 method.insert = cfg.download_complete, private|const|string, (cat,(cfg.download),"complete/")
 method.insert = cfg.download_temp, private|const|string, (cat,(cfg.download),"temp/")
