--- a/rootfs/home/torrent/.rtorrent.rc
+++ b/rootfs/home/torrent/.rtorrent.rc
@@ -2,7 +2,7 @@
 system.daemon.set = true
 
 # Instance layout
-method.insert = cfg.basedir, private|const|string, (cat,"/home/torrent/")
+method.insert = cfg.basedir, private|const|string, (cat,"/torrent/")
 method.insert = cfg.download, private|const|string, (cat,"/downloads/")
 method.insert = cfg.download_complete, private|const|string, (cat,(cfg.download),"complete/")
 method.insert = cfg.download_temp, private|const|string, (cat,(cfg.download),"temp/")
